--- a/Client/llfcchat/style/stylesheet.qss
+++ b/Client/llfcchat/style/stylesheet.qss
@@ -330,6 +330,30 @@ LoadingDlg{
     border-image: url(:/res/contact_list_press.png);
 }
 
+#side_settings_lb[state='normal']{
+    border-image: url(:/res/settings.png);
+}
+
+#side_settings_lb[state='hover']{
+    border-image: url(:/res/settings_hover.png);
+}
+
+
+#side_settings_lb[state='pressed']{
+    border-image: url(:/res/settings_press.png);
+}
+
+#side_settings_lb[state='selected_normal']{
+    border-image: url(:/res/settings_press.png);
+}
+
+#side_settings_lb[state='selected_hover']{
+    border-image: url(:/res/settings_press.png);
+}
+
+#side_settings_lb[state='selected_pressed']{
+    border-image: url(:/res/settings_press.png);
+}
 
 #search_edit {
     border: 2px solid #f1f1f1;
