fix(Client): User's info cleaned when offline and make one ChatPage peer one friend

--- a/Client/AnyoneChat/chatdialog.ui
+++ b/Client/AnyoneChat/chatdialog.ui
@@ -335,9 +335,9 @@
       </size>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
-     <widget class="ChatPage" name="chat_page"/>
+     <widget class="QWidget" name="chat_page"/>
      <widget class="ApplyFriendPage" name="friend_apply_page"/>
      <widget class="FriendInfoPage" name="friend_info_page"/>
      <widget class="UserInfoPage" name="user_info_page"/>
@@ -375,12 +375,6 @@
    <class>ApplyFriendPage</class>
    <extends>QWidget</extends>
    <header location="global">applyfriendpage.h</header>
-   <container>1</container>
-  </customwidget>
-  <customwidget>
-   <class>ChatPage</class>
-   <extends>QWidget</extends>
-   <header location="global">chatpage.h</header>
    <container>1</container>
   </customwidget>
   <customwidget>
